--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chat",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/main.js",
   "type": "module",
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon ./src/main.js",
@@ -25,7 +25,9 @@
     "gtts.js": "^1.0.1",
     "open": "^9.1.0",
     "openai": "^3.2.1",
-    "telegraf": "^4.12.2"
+    "play-sound": "^1.1.5",
+    "stream": "^0.0.2",
+    "telegraf": "^4.4.1"
   },
   "description": ""
 }
